unpackaged/main/default/objects/Financial__c/fields/Actuals__c.field-meta.xml
<CustomField>
    <fullName>Actuals__c</fullName>
    <description>This field is to reflect a negative value for &#39;Credit Memo&#39; type Financials.</description>
    <formula>IF(ISPICKVAL( Type__c , &quot;Credit Memo&quot;), (Subtotal__c * (-1)), Subtotal__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actuals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>