unpackaged/main/default/objects/Financial__c/fields/Applied__c.field-meta.xml
<CustomField>
    <fullName>Applied__c</fullName>
    <label>Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>