unpackaged/main/default/objects/Financial__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <length>25</length>
    <type>Text</type>
</CustomField>