unpackaged/main/default/objects/Financial__c/fields/Discount_Total__c.field-meta.xml
<CustomField>
    <fullName>Discount_Total__c</fullName>
    <label>Discount Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>