unpackaged/main/default/objects/Financial__c/fields/Discretionary_Total__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Total__c</fullName>
    <label>Discretionary Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>