unpackaged/main/default/objects/Financial__c/fields/Opty_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Opty_Owner_Email__c</fullName>
    <label>Opty Owner Email</label>
    <type>Email</type>
</CustomField>