unpackaged/main/default/objects/Financial__c/fields/Shipping_Total__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Total__c</fullName>
    <label>Shipping Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>