unpackaged/main/default/objects/Financial__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>75</length>
    <type>Text</type>
</CustomField>