unpackaged/main/default/objects/Financial__c/fields/Subscription_Total__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Total__c</fullName>
    <label>Subscription Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>