unpackaged/main/default/objects/Financial__c/fields/Transaction_subtotal_before_any_discount__c.field-meta.xml
<CustomField>
    <fullName>Transaction_subtotal_before_any_discount__c</fullName>
    <label>Tax Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>