unpackaged/main/default/objects/Financial__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash Sale</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Credit Memo</fullName>
            </value>
            <value>
                <fullName>Cash Refund</fullName>
            </value>
            <value>
                <fullName>Customer Refund</fullName>
            </value>
            <value>
                <fullName>Customer Deposit</fullName>
            </value>
            <value>
                <fullName>Customer Payment</fullName>
                <isActive>false</isActive>
                <label>Customer Payment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>