unpackaged/main/default/objects/Financial__c/fields/Unapplied__c.field-meta.xml
<CustomField>
    <fullName>Unapplied__c</fullName>
    <label>Unapplied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>